# PyInputRecorder

./: .gitignore  README.md  pyproject.toml
pyinputrecorder/: _main.py  cli.py
tests/: test_pyinputrecorder.py
