[tool.poetry]
name = "PyInputRecorder"
version = "0.1.0"
description = ""
authors = ["Ahmed Shariff <shariff.mfa@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
irec = "pyinputrecorder.cli:cli"